[package]
authors = ["cyqsimon <28627918+cyqsimon@users.noreply.github.com>"]
edition = "2018"
name = "wows_mod_installer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18.2"
fs_extra = "1.2.0"
json = "0.12.4"
